--- a/jammu.html
+++ b/jammu.html
@@ -30,7 +30,7 @@
       <div id="menu-btn" class="fas fa-bars"></div>
 
       <a data-aos="zoom-in-left" data-aos-delay="150" href="#" class="logo">
-        <i class="fas fa-bus"></i>S F H
+        <i class="fas fa-bus"></i>Solofriendly
       </a>
 
       <nav class="navbar">
@@ -256,7 +256,7 @@
     <section class="footer">
       <div class="box-container">
         <div class="box" data-aos="fade-up" data-aos-delay="150">
-          <a href="#" class="logo"> <i class="fas fa-bus"></i>S F H </a>
+          <a href="#" class="logo"> <i class="fas fa-bus"></i>Solofriendly</a>
           <p>We are here to make your traveling dreams complete.</p>
           <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
