--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     <section class="footer">
       <div class="box-container">
         <div class="box" data-aos="fade-up" data-aos-delay="150">
-          <a href="#" class="logo"> <i class="fas fa-bus"></i>S F H </a>
+          <a href="#" class="logo"> <i class="fas fa-bus"></i>Solofriendly</a>
           <p>We are here to make your traveling dreams complete.</p>
           <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
